install firebase flowbite reacr-icon

--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,24 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
-    "firebase": "^10.8.0",
+    "firebase": "^10.6.0",
+    "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-quill": "^0.0.2",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
     "redux-persist": "^6.0.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
