--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "road-construction-expense-monitoring",
   "version": "1.0.0",
   "description": "road-construction-Expense-Monitoring",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "nodemon": "^3.0.3"
   }
 }
