--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
     "firebase": "^10.6.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-quill": "^0.0.2",
