--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
     "moment": "^2.30.1",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^6.1.0",
