--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-quill": "^0.0.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
+    "react-tooltip": "^5.26.3",
     "redux-persist": "^6.0.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1"
