--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-just-parallax": "^3.1.16",
     "react-quill": "^0.0.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
