--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
+    "clsx": "^2.1.0",
     "firebase": "^10.6.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
@@ -21,6 +23,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-just-parallax": "^3.1.16",
     "react-quill": "^0.0.2",
