--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   }
 }
