--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.22.1",
     "react-tooltip": "^5.26.3",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1"
   },
