--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.0.3",
+    "pdfkit": "^0.15.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   }
